# symphoxy

./: Cargo.toml
examples/: scales.rs
examples/final_project/: bass.rs
src/: lib.rs
src/interactive/: mod.rs
src/note/: chord.rs
src/piece/: line.rs  mod.rs
src/play/: sources.rs
src/scales/: interval.rs  mod.rs
src/scales/tet12/: mod.rs
